force-app/main/default/objects/Process_Attribute_Review_Detail__c/Process_Attribute_Review_Detail__c.object-meta.xml
<CustomObject>
    <label>Process Attribute Review Detail</label>
    <nameField>
        <label>Process Attribute Review Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Attribute Review Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>