force-app/main/default/objects/Process_Attribute_Review_Detail__c/fields/Approve_Level_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Approve_Level_Allowed__c</fullName>
    <label>Approve Level Allowed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Next Level</fullName>
            </value>
            <value>
                <fullName>Current Reject Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>