force-app/main/default/objects/Process_Attribute_Review_Detail__c/fields/Bulk_Approval__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulk Approval</label>
    <type>Checkbox</type>
</CustomField>