force-app/main/default/objects/Process_Attribute_Review_Detail__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level No</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>