force-app/main/default/objects/Process_Attribute_Review_Detail__c/fields/Process_Attribute_Review_Detail__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute_Review_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Attribute Review Detail</label>
    <referenceTo>Process_Attribute_Review_Detail__c</referenceTo>
    <relationshipLabel>Process Attribute Review Details</relationshipLabel>
    <relationshipName>Process_Attribute_Review_Details</relationshipName>
    <type>Lookup</type>
</CustomField>