force-app/main/default/objects/Process_Attribute_Review_Detail__c/fields/Reject_Level_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Reject_Level_Allowed__c</fullName>
    <label>Reject Level Allowed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Creator</fullName>
            </value>
            <value>
                <fullName>Just Previous</fullName>
            </value>
            <value>
                <fullName>All Previous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>