force-app/main/default/objects/Process_Attribute_Review_Detail__c/fields/Reviewer_Type__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Type__c</fullName>
    <label>Reviewer Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>