force-app/main/default/objects/Process_Attribute_Review_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bulk_Approval__c</columns>
    <columns>Process_Attribute_Review_Detail__c</columns>
    <columns>Process_Path_Task_Detail__c</columns>
    <columns>Process_Review_Checklist__c</columns>
    <columns>Approve_Level_Allowed__c</columns>
    <columns>Reject_Level_Allowed__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>